tests/sksl/errors/SwitchDuplicateDefault.glsl
### Compilation failed:

error: 4: expected expression, but found 'default'
1 error
